fix spacing issues on cart dropdown and icons

--- a/saleor/static/scss/components/_cart-dropdown.scss
+++ b/saleor/static/scss/components/_cart-dropdown.scss
@@ -1,7 +1,8 @@
 .cart-dropdown {
   position: absolute;
-  width: 33rem;
-  top: .5rem;
+  width: 30rem;
+  height: 20rem;
+  top: 3rem;
   right: 0;
   z-index: 3;
   display: none;
@@ -75,6 +76,7 @@
     img {
       margin: $global-margin 0;
     }
+    color:$turquoise;
   }
   @include media-breakpoint-up(md) {
     &.show {
